logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2023-06-07T00:00:00+00:00/task_id=create_postgres_table/attempt=4.log
[2023-06-09T14:41:17.571+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.create_postgres_table scheduled__2023-06-07T00:00:00+00:00 [queued]>
[2023-06-09T14:41:17.576+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.create_postgres_table scheduled__2023-06-07T00:00:00+00:00 [queued]>
[2023-06-09T14:41:17.576+0000] {taskinstance.py:1308} INFO - Starting attempt 4 of 9
[2023-06-09T14:41:17.584+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-06-07 00:00:00+00:00
[2023-06-09T14:41:17.587+0000] {standard_task_runner.py:57} INFO - Started process 890 to run task
[2023-06-09T14:41:17.591+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'create_postgres_table', 'scheduled__2023-06-07T00:00:00+00:00', '--job-id', '15', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmpi97hegub']
[2023-06-09T14:41:17.593+0000] {standard_task_runner.py:85} INFO - Job 15: Subtask create_postgres_table
[2023-06-09T14:41:17.636+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.create_postgres_table scheduled__2023-06-07T00:00:00+00:00 [running]> on host 94560a00d375
[2023-06-09T14:41:17.705+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='znawawi' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-06-07T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-06-07T00:00:00+00:00'
[2023-06-09T14:41:17.706+0000] {sql.py:262} INFO - Executing: "
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
            )
        
[2023-06-09T14:41:17.719+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-09T14:41:17.769+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-09T14:41:17.779+0000] {sql.py:375} INFO - Running statement: "
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
            )
        , parameters: None
[2023-06-09T14:41:17.782+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: unterminated quoted identifier at or near ""
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
            )
        "
LINE 1: "
        ^

[2023-06-09T14:41:17.796+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=create_postgres_table, execution_date=20230607T000000, start_date=20230609T144117, end_date=20230609T144117
[2023-06-09T14:41:17.803+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 15 for task create_postgres_table (unterminated quoted identifier at or near ""
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
            )
        "
LINE 1: "
        ^
; 890)
[2023-06-09T14:41:17.844+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-06-09T14:41:17.861+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
